--- a/css/style.css
+++ b/css/style.css
@@ -337,6 +337,7 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 .header-top-search__input {
   border-bottom: solid 1px var(--color-white-85a);
+  border-radius: 0;
   transition: border-color 0.3s ease-in-out;
 }
 .header-top__search-close {
