--- a/css/style.css
+++ b/css/style.css
@@ -1066,6 +1066,7 @@ input[type="search"]::-webkit-search-results-decoration {
   position: absolute;
   top: 15px;
   right: 15px;
+  line-height: 0;
 }
 .gallary-modal__btn-close svg {
   width: 20px;
